--- a/src/pages/newHome/view/index.scss
+++ b/src/pages/newHome/view/index.scss
@@ -9,7 +9,7 @@
 }
 
 .content {
-  flex: 1;
+  flex: 1 0 auto;
   width: 100%;
   margin: 0 auto;
 }
